@@ -1,26 +1,6 @@
 package ee.eesti.riha.rest.integration.document;
 
-import static org.junit.Assert.*;
-
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ws.rs.core.Response;
-
-import org.apache.cxf.jaxrs.client.JAXRSClientFactory;
-import org.apache.cxf.jaxrs.client.WebClient;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.util.StringUtils;
-
 import com.google.gson.JsonObject;
-
 import ee.eesti.riha.rest.MyTestRunner;
 import ee.eesti.riha.rest.TestHelper;
 import ee.eesti.riha.rest.error.ErrorCodes;
@@ -33,10 +13,31 @@ import ee.eesti.riha.rest.logic.util.FileHelper;
 import ee.eesti.riha.rest.logic.util.JsonHelper;
 import ee.eesti.riha.rest.service.ApiCGIService;
 import ee.eesti.riha.rest.service.ApiClassicService;
+import org.apache.cxf.jaxrs.client.JAXRSClientFactory;
+import org.apache.cxf.jaxrs.client.WebClient;
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.web.WebAppConfiguration;
+import org.springframework.util.StringUtils;
 
-//@RunWith(SpringJUnit4ClassRunner.class)
+import javax.ws.rs.core.Response;
+import java.io.InputStream;
+import java.util.ArrayList;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
 @RunWith(MyTestRunner.class)
-@ContextConfiguration("classpath*: **/integration-test-applicationContext.xml")
+@WebAppConfiguration
+@ContextConfiguration("/integration-test-applicationContext.xml")
 public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
 
   // general info here
@@ -114,7 +115,7 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     String resultKey = StringUtils.deleteAny(jsonReturned, "[]");
     String id1 = resultKey.replace(".0", "");
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id1));
-    idUnderTestList.add(new Integer(id1));
+    idUnderTestList.add(Integer.valueOf(id1));
 
   }
 
@@ -133,7 +134,7 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     String resultKey = StringUtils.deleteAny(jsonReturned, "[]");
     String id1 = resultKey.replace(".0", "");
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id1));
-    idUnderTestList.add(new Integer(id1));
+    idUnderTestList.add(Integer.valueOf(id1));
     System.out.println("ID1:" + id1);
     Response responseGet = serviceUnderTest.getCGI(Finals.GET, pathToUse + id1, "testToken", null, null, null, null,
         null);
@@ -251,7 +252,7 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     String[] keys = resultKeys.split(",");
     assertEquals(1, keys.length);
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[0]));
-    idUnderTestList.add(new Integer(keys[0]));
+    idUnderTestList.add(Integer.valueOf(keys[0]));
 
   }
 
@@ -272,7 +273,7 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     String[] keys = resultKeys.split(",");
     assertEquals(1, keys.length);
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[0]));
-    idUnderTestList.add(new Integer(keys[0]));
+    idUnderTestList.add(Integer.valueOf(keys[0]));
 
     Response responseGet = serviceUnderTest.getCGI(Finals.GET, pathToUse + keys[0], "testToken", null, null, null,
         null, null);
@@ -317,8 +318,8 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     assertEquals(2, keys.length);
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[0]));
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[1]));
-    idUnderTestList.add(new Integer(keys[0]));
-    idUnderTestList.add(new Integer(keys[1]));
+    idUnderTestList.add(Integer.valueOf(keys[0]));
+    idUnderTestList.add(Integer.valueOf(keys[1]));
 
   }
 
@@ -411,8 +412,8 @@ public class TestApiCGIServiceImpl_POST_opPost_Document<T> {
     String id2 = items.get(1).toString().replace(".0", "");
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id1));
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id2));
-    idUnderTestList.add(new Integer(id1));
-    idUnderTestList.add(new Integer(id2));
+    idUnderTestList.add(Integer.valueOf(id1));
+    idUnderTestList.add(Integer.valueOf(id2));
     List<RihaRestError> errors = partErrData.getErrors();
     assertEquals(2, errors.size());
     assertEquals(ErrorCodes.INPUT_JSON_REQUIRED_PROPERTIES_MISSING, errors.get(0).getErrcode());
